--- a/bouncy_ball.qsf
+++ b/bouncy_ball.qsf
@@ -263,6 +263,12 @@ set_location_assignment PIN_G8 -to vert_sync_out
 set_location_assignment PIN_H8 -to horiz_sync_out
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_location_assignment PIN_A7 -to VGA_B[3]
+set_location_assignment PIN_J8 -to VGA_G[3]
+set_location_assignment PIN_H8 -to VGA_HS
+set_location_assignment PIN_A5 -to VGA_R[3]
+set_location_assignment PIN_G8 -to VGA_VS
+set_global_assignment -name VHDL_FILE pipe.vhd
 set_global_assignment -name BDF_FILE Block1.bdf
 set_global_assignment -name VHDL_FILE vga_sync.vhd
 set_global_assignment -name VHDL_FILE mouse.vhd
@@ -273,9 +279,4 @@ set_global_assignment -name SIP_FILE PLL.sip
 set_global_assignment -name VHDL_FILE bouncy_ball.vhd
 set_global_assignment -name QIP_FILE pll2.qip
 set_global_assignment -name SIP_FILE pll2.sip
-set_location_assignment PIN_A7 -to VGA_B[3]
-set_location_assignment PIN_J8 -to VGA_G[3]
-set_location_assignment PIN_H8 -to VGA_HS
-set_location_assignment PIN_A5 -to VGA_R[3]
-set_location_assignment PIN_G8 -to VGA_VS
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
