--- a/bouncy_ball.qsf
+++ b/bouncy_ball.qsf
@@ -287,4 +287,5 @@ set_global_assignment -name VHDL_FILE bouncy_ball.vhd
 set_global_assignment -name QIP_FILE pll2.qip
 set_global_assignment -name SIP_FILE pll2.sip
 set_global_assignment -name VHDL_FILE display_text.vhd
+set_global_assignment -name VHDL_FILE lfsr.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
