--- a/bouncy_ball.qsf
+++ b/bouncy_ball.qsf
@@ -288,4 +288,5 @@ set_global_assignment -name QIP_FILE pll2.qip
 set_global_assignment -name SIP_FILE pll2.sip
 set_global_assignment -name VHDL_FILE display_text.vhd
 set_global_assignment -name VHDL_FILE lfsr.vhd
+set_global_assignment -name VHDL_FILE medic_pack.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
